Fix help text wrapping to be under the input.

--- a/fusor-ember-cli/app/styles/custom.scss
+++ b/fusor-ember-cli/app/styles/custom.scss
@@ -613,7 +613,6 @@ table.fusor-table {
 .help-block {
   font-style: italic;
   display: inline-block;
-  margin-left: -20px;
 }
 
 .osp-autogeneric-label {
